Codex: Adicionando função de cadastrar e selecionar categorias do produto
